# visual_novel_engine

./: CMakeLists.txt  README.md
lib/: IrrXMLd.lib  zlibd.lib  zlibstaticd.lib
res/: text.shader  vn.shader
src/: Renderengine.cpp  Renderengine.hpp  main.cpp  shader.cpp  shader.hpp  textengine.cpp  textengine.hpp
